Добавил вроде как все модели

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,7 +15,19 @@
     ::-webkit-scrollbar {
       width: 0;
     }
-
+    img {
+      -webkit-user-drag: none;
+      user-drag: none;
+      -khtml-user-drag: none;
+      -moz-user-select: none;
+      -webkit-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+    }
+    ::selection {
+      color: #fff;
+      background-color: #415bc4;
+    }
   </style>
   <title>SQLCrowd</title>
 </head>
