Много чего добавлено, включая ошибок. Поправлена регистрация и авторизация

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,10 +23,20 @@
       -webkit-user-select: none;
       -ms-user-select: none;
       user-select: none;
+      pointer-events: none
     }
     ::selection {
       color: #fff;
       background-color: #415bc4;
+    }
+    ul {
+      padding: 0;
+      margin: 0;
+    }
+    li {
+      padding: 0;
+      margin: 0;
+      list-style: none;
     }
   </style>
   <title>SQLCrowd</title>
