--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,48 +2,92 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
+    <meta charset="utf-8"/>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"/>
 
-  <style>
-    html {
-      overflow-y: scroll;
-    }
-    ::-webkit-scrollbar {
-      width: 0;
-    }
-    img {
-      -webkit-user-drag: none;
-      user-drag: none;
-      -khtml-user-drag: none;
-      -moz-user-select: none;
-      -webkit-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-      pointer-events: none
-    }
-    ::selection {
-      color: #fff;
-      background-color: #415bc4;
-    }
-    ul {
-      padding: 0;
-      margin: 0;
-    }
-    li {
-      padding: 0;
-      margin: 0;
-      list-style: none;
-    }
-  </style>
-  <title>SQLCrowd</title>
+    <style>
+        html, body {
+            height: 100%;
+            width: 100%;
+            margin: 0;
+            padding: 0;
+        }
+
+        html {
+            overflow-y: scroll;
+        }
+
+        ::-webkit-scrollbar {
+            width: 0;
+        }
+
+        img {
+            -webkit-user-drag: none;
+            user-drag: none;
+            -khtml-user-drag: none;
+            -moz-user-select: none;
+            -webkit-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+            pointer-events: none
+        }
+
+        ::selection {
+            color: #fff;
+            background-color: #415bc4;
+        }
+
+        ul {
+            padding: 0;
+            margin: 0;
+        }
+
+        li {
+            padding: 0;
+            margin: 0;
+            list-style: none;
+        }
+
+        @keyframes animatedBackground {
+            0% {
+                background-position: 0 0;
+            }
+            50% {
+                background-position: 30% 0;
+            }
+            100% {
+                background-position: 0 0;
+            }
+        }
+
+        .animated {
+            animation: animatedBackground 20s ease-in-out infinite;
+        }
+
+        .main-color-blue {
+            background: rgba(0, 111, 255, 0.15) !important;
+        }
+
+        .main-color-yellow {
+            background: rgba(255, 251, 0, 0.15) !important;
+        }
+
+        .main-color-green {
+            background: rgba(102, 255, 0, 0.15) !important;
+        }
+
+        .main-color-red {
+            background: rgba(255, 0, 0, 0.15) !important;
+        }
+    </style>
+    <title>SQLCrowd</title>
 </head>
 
 <body>
-  <div id="root" class="context"></div>
+<div id="root" class="context"></div>
 </body>
 
 </html>
