Почти доделано. Среди крупного: сделана проверка кода и условий задач на плагиат. Починил выставление оценок и баллов. Сделана страница с рейтингом

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -68,7 +68,7 @@
         }
 
         .main-color-blue {
-            background: rgba(0, 111, 255, 0.15) !important;
+            background: rgba(0, 92, 124, 0.15) !important;
         }
 
         .main-color-yellow {
@@ -81,6 +81,13 @@
 
         .main-color-red {
             background: rgba(255, 0, 0, 0.15) !important;
+        }
+
+        .main-color-gray {
+            background: rgba(157, 137, 137, 0.15) !important;
+        }
+        a {
+            color: black;
         }
     </style>
     <title>SQLCrowd</title>
