--- a/client/public/index.html
+++ b/client/public/index.html
@@ -90,6 +90,17 @@
         a {
             color: black;
         }
+        .hoverEffect {
+            cursor: pointer;
+            user-select: none;
+font-size: 25px;
+        }
+        .hoverEffect:after {
+            font-size: 13px;
+        }
+        .hoverEffect:hover {
+            opacity: 0.5;
+        }
     </style>
     <title>SQLCrowd</title>
 </head>
